| Summary: | ASTERISK-26103: cdr: Assert on 'dial end' event during a blond transfer | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2016-06-09 10:33:48 | Date Closed: | 2016-06-09 11:29:00 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | CDR/General |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Scenario: Caller blonde transfer
Bob calls Charlie who answers. Bob puts Charlie on hold and calls Alice. Before Alice answers, Bob transfers Charlie to Alice. Charlie's channel triggers an assert because he gets an "ANSWERED" event even though he never dialed anything. With recent changed to dial events, this is now a valid scenario so the assert needs to be removed. | ||
| Comments: | |||